fixed layout on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -419,6 +419,13 @@ a.icon-link {
 
 }
 
+.grid-menu {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 #map_canvas{width:100%;height:400px;}
 /*PROGRESS BAR*/
 
@@ -1457,7 +1464,7 @@ footer {
 }
 /* MEDIA QUERIES */
 
-// Small screens
+/* Small screens */
 @media only screen { } /* Define mobile styles */
 
 @media only screen and (max-width: 40em) {
